@@ -7,20 +7,22 @@
  */
 package org.opendaylight.netconf.client.mdsal;
 
+import static java.util.Objects.requireNonNull;
+
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
 import java.io.EOFException;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.VarHandle;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
 import java.util.Queue;
 import java.util.concurrent.Semaphore;
-import java.util.concurrent.atomic.AtomicIntegerFieldUpdater;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
+import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.jdt.annotation.Nullable;
 import org.opendaylight.netconf.api.DocumentedException;
 import org.opendaylight.netconf.api.NetconfTerminationReason;
@@ -47,7 +49,25 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class NetconfDeviceCommunicator implements NetconfClientSessionListener, RemoteDeviceCommunicator {
+    private record Request(
+            @NonNull UncancellableFuture<RpcResult<NetconfMessage>> future,
+            @NonNull NetconfMessage request) {
+        Request {
+            requireNonNull(future);
+            requireNonNull(request);
+        }
+    }
+
     private static final Logger LOG = LoggerFactory.getLogger(NetconfDeviceCommunicator.class);
+    private static final VarHandle CLOSING;
+
+    static {
+        try {
+            CLOSING = MethodHandles.lookup().findVarHandle(NetconfDeviceCommunicator.class, "closing", boolean.class);
+        } catch (NoSuchFieldException | IllegalAccessException e) {
+            throw new ExceptionInInitializerError(e);
+        }
+    }
 
     protected final RemoteDevice<NetconfDeviceCommunicator> remoteDevice;
     private final @Nullable UserPreferences overrideNetconfCapabilities;
@@ -60,17 +80,17 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
     private final Queue<Request> requests = new ArrayDeque<>();
     private NetconfClientSession currentSession;
 
-    // isSessionClosing indicates a close operation on the session is issued and
-    // tearDown will surely be called later to finish the close.
-    // Used to allow only one thread to enter tearDown and other threads should
-    // NOT enter it simultaneously and should end its close operation without
-    // calling tearDown to release the locks they hold to avoid deadlock.
-    private static final AtomicIntegerFieldUpdater<NetconfDeviceCommunicator> CLOSING_UPDATER =
-            AtomicIntegerFieldUpdater.newUpdater(NetconfDeviceCommunicator.class, "closing");
-    private volatile int closing;
+    // isSessionClosing indicates a close operation on the session is issued and tearDown will surely be called later
+    // to finish the close.
+    // Used to allow only one thread to enter tearDown and other threads should NOT enter it simultaneously and should
+    // end its close operation without calling tearDown to release the locks they hold to avoid deadlock.
+    //
+    // This field is manipulated using CLOSING VarHandle
+    @SuppressWarnings("unused")
+    private volatile boolean closing;
 
     public boolean isSessionClosing() {
-        return closing != 0;
+        return (boolean) CLOSING.getVolatile(this);
     }
 
     public NetconfDeviceCommunicator(final RemoteDeviceId id,
@@ -120,7 +140,7 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
 
     public void disconnect() {
         // If session is already in closing, no need to close it again
-        if (currentSession != null && startClosing() && currentSession.isUp()) {
+        if (currentSession != null && CLOSING.compareAndSet(this, false, true) && currentSession.isUp()) {
             currentSession.close();
         }
     }
@@ -130,7 +150,7 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
             LOG.warn("It's curious that no one to close the session but tearDown is called!");
         }
         LOG.debug("Tearing down {}", reason);
-        final List<UncancellableFuture<RpcResult<NetconfMessage>>> futuresToCancel = new ArrayList<>();
+        final var futuresToCancel = new ArrayList<UncancellableFuture<RpcResult<NetconfMessage>>>();
         sessionLock.lock();
         try {
             if (currentSession != null) {
@@ -139,9 +159,9 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
                  * Walk all requests, check if they have been executing
                  * or cancelled and remove them from the queue.
                  */
-                final Iterator<Request> it = requests.iterator();
+                final var it = requests.iterator();
                 while (it.hasNext()) {
-                    final Request r = it.next();
+                    final var r = it.next();
                     if (r.future.isUncancellable()) {
                         futuresToCancel.add(r.future);
                         it.remove();
@@ -157,9 +177,8 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
             sessionLock.unlock();
         }
 
-        // Notify pending request futures outside of the sessionLock to avoid unnecessarily
-        // blocking the caller.
-        for (final UncancellableFuture<RpcResult<NetconfMessage>> future : futuresToCancel) {
+        // Notify pending request futures outside of the sessionLock to avoid unnecessarily blocking the caller.
+        for (var future : futuresToCancel) {
             if (Strings.isNullOrEmpty(reason)) {
                 future.set(createSessionDownRpcResult());
             } else {
@@ -167,23 +186,24 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
             }
         }
 
-        closing = 0;
+        CLOSING.setVolatile(this, false);
     }
 
     private RpcResult<NetconfMessage> createSessionDownRpcResult() {
         return createErrorRpcResult(ErrorType.TRANSPORT,
-                String.format("The netconf session to %1$s is disconnected", id.name()));
+            "The netconf session to %1$s is disconnected".formatted(id.name()));
     }
 
     private static RpcResult<NetconfMessage> createErrorRpcResult(final ErrorType errorType, final String message) {
         return RpcResultBuilder.<NetconfMessage>failed()
-            .withError(errorType, ErrorTag.OPERATION_FAILED, message).build();
+            .withError(errorType, ErrorTag.OPERATION_FAILED, message)
+            .build();
     }
 
     @Override
     public void onSessionDown(final NetconfClientSession session, final Exception exception) {
         // If session is already in closing, no need to call tearDown again.
-        if (startClosing()) {
+        if (CLOSING.compareAndSet(this, false, true)) {
             if (exception instanceof EOFException) {
                 LOG.info("{}: Session went down: {}", id, exception.getMessage());
             } else {
@@ -209,12 +229,13 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
 
     @Override
     public void onMessage(final NetconfClientSession session, final NetconfMessage message) {
-        /*
-         * Dispatch between notifications and messages. Messages need to be processed
-         * with lock held, notifications do not.
-         */
-        if (isNotification(message)) {
-            processNotification(message);
+        // Dispatch between notifications and messages. Messages need to be processed with lock held, notifications do
+        // not.
+        if (NotificationMessage.ELEMENT_NAME.equals(XmlElement.fromDomDocument(message.getDocument()).getName())) {
+            if (LOG.isTraceEnabled()) {
+                LOG.trace("{}: Notification received: {}", id, message);
+            }
+            remoteDevice.onNotification(message);
         } else {
             processMessage(message);
         }
@@ -222,7 +243,7 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
 
     @Override
     public void onError(final NetconfClientSession session, final Exception failure) {
-        final Request request = pollRequest();
+        final var request = pollRequest();
         if (request != null) {
             request.future.set(RpcResultBuilder.<NetconfMessage>failed()
                 .withRpcError(toRpcError(new DocumentedException(failure.getMessage(),
@@ -234,11 +255,9 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
     }
 
     private @Nullable Request pollRequest() {
-        Request request;
         sessionLock.lock();
-
         try {
-            request = requests.peek();
+            var request = requests.peek();
             if (request != null && request.future.isUncancellable()) {
                 request = requests.poll();
                 // we have just removed one request from the queue
@@ -246,41 +265,42 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
                 if (semaphore != null) {
                     semaphore.release();
                 }
-            } else {
-                request = null;
+                return request;
             }
+            return null;
         } finally {
             sessionLock.unlock();
         }
-        return request;
     }
 
     private void processMessage(final NetconfMessage message) {
-        final Request request = pollRequest();
+        final var request = pollRequest();
         if (request == null) {
             // No matching request, bail out
-            LOG.warn("{}: Ignoring unsolicited message {}", id, msgToS(message));
+            if (LOG.isWarnEnabled()) {
+                LOG.warn("{}: Ignoring unsolicited message {}", id, msgToS(message));
+            }
             return;
         }
 
         LOG.debug("{}: Message received {}", id, message);
-
         if (LOG.isTraceEnabled()) {
             LOG.trace("{}: Matched request: {} to response: {}", id, msgToS(request.request), msgToS(message));
         }
 
-        final String inputMsgId = request.request.getDocument().getDocumentElement()
+        final var inputMsgId = request.request.getDocument().getDocumentElement()
             .getAttribute(XmlNetconfConstants.MESSAGE_ID);
-        final String outputMsgId = message.getDocument().getDocumentElement()
+        final var outputMsgId = message.getDocument().getDocumentElement()
             .getAttribute(XmlNetconfConstants.MESSAGE_ID);
         if (!inputMsgId.equals(outputMsgId)) {
             // FIXME: we should be able to transform directly to RpcError without an intermediate exception
             final var ex = new DocumentedException("Response message contained unknown \"message-id\"", null,
                 ErrorType.PROTOCOL, ErrorTag.BAD_ATTRIBUTE, ErrorSeverity.ERROR,
                 ImmutableMap.of("actual-message-id", outputMsgId, "expected-message-id", inputMsgId));
-            LOG.warn("{}: Invalid request-reply match, reply message contains different message-id, "
-                + "request: {}, response: {}", id, msgToS(request.request), msgToS(message));
-
+            if (LOG.isWarnEnabled()) {
+                LOG.warn("{}: Invalid request-reply match, reply message contains different message-id, request: {}, "
+                    + "response: {}", id, msgToS(request.request), msgToS(message));
+            }
             request.future.set(RpcResultBuilder.<NetconfMessage>failed().withRpcError(toRpcError(ex)).build());
 
             // recursively processing message to eventually find matching request
@@ -288,16 +308,20 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
             return;
         }
 
+        final RpcResult<NetconfMessage> result;
         if (NetconfMessageUtil.isErrorMessage(message)) {
             // FIXME: we should be able to transform directly to RpcError without an intermediate exception
             final var ex = DocumentedException.fromXMLDocument(message.getDocument());
-            LOG.warn("{}: Error reply from remote device, request: {}, response: {}",
-                id, msgToS(request.request), msgToS(message));
-            request.future.set(RpcResultBuilder.<NetconfMessage>failed().withRpcError(toRpcError(ex)).build());
-            return;
+            if (LOG.isWarnEnabled()) {
+                LOG.warn("{}: Error reply from remote device, request: {}, response: {}", id, msgToS(request.request),
+                    msgToS(message));
+            }
+            result = RpcResultBuilder.<NetconfMessage>failed().withRpcError(toRpcError(ex)).build();
+        } else {
+            result = RpcResultBuilder.success(message).build();
         }
 
-        request.future.set(RpcResultBuilder.success(message).build());
+        request.future.set(result);
     }
 
     private static String msgToS(final NetconfMessage msg) {
@@ -344,70 +368,40 @@ public class NetconfDeviceCommunicator implements NetconfClientSessionListener, 
     }
 
     private ListenableFuture<RpcResult<NetconfMessage>> sendRequestWithLock(final NetconfMessage message,
-                                                                            final QName rpc) {
+            final QName rpc) {
         if (LOG.isTraceEnabled()) {
             LOG.trace("{}: Sending message {}", id, msgToS(message));
         }
 
         if (currentSession == null) {
-            LOG.warn("{}: Session is disconnected, failing RPC request {}",
-                    id, message);
+            LOG.warn("{}: Session is disconnected, failing RPC request {}", id, message);
             return Futures.immediateFuture(createSessionDownRpcResult());
         }
 
-        final Request req = new Request(new UncancellableFuture<>(true), message);
+        final var req = new Request(new UncancellableFuture<>(true), message);
         requests.add(req);
 
         currentSession.sendMessage(req.request).addListener(future -> {
             if (!future.isSuccess()) {
                 // We expect that a session down will occur at this point
-                LOG.debug("{}: Failed to send request {}", id,
-                        XmlUtil.toString(req.request.getDocument()),
-                        future.cause());
-
-                if (future.cause() != null) {
-                    req.future.set(createErrorRpcResult(ErrorType.TRANSPORT, future.cause().getLocalizedMessage()));
-                } else {
-                    req.future.set(createSessionDownRpcResult()); // assume session is down
+                final var cause = future.cause();
+                if (LOG.isDebugEnabled()) {
+                    LOG.debug("{}: Failed to send request {}", id, XmlUtil.toString(req.request.getDocument()), cause);
                 }
-                req.future.setException(future.cause());
+
+                final RpcResult<NetconfMessage> result;
+                if (cause == null) {
+                    // assume session is down
+                    result = createSessionDownRpcResult();
+                } else {
+                    result = createErrorRpcResult(ErrorType.TRANSPORT, cause.getLocalizedMessage());
+                }
+                req.future.set(result);
             } else {
                 LOG.trace("Finished sending request {}", req.request);
             }
         });
 
         return req.future;
-    }
-
-    private void processNotification(final NetconfMessage notification) {
-        if (LOG.isTraceEnabled()) {
-            LOG.trace("{}: Notification received: {}", id, notification);
-        }
-
-        remoteDevice.onNotification(notification);
-    }
-
-    private static boolean isNotification(final NetconfMessage message) {
-        final var doc = message.getDocument();
-        if (doc == null) {
-            // We have no message, which mean we have a FailedNetconfMessage
-            return false;
-        }
-        return NotificationMessage.ELEMENT_NAME.equals(XmlElement.fromDomDocument(doc).getName()) ;
-    }
-
-    private static final class Request {
-        final UncancellableFuture<RpcResult<NetconfMessage>> future;
-        final NetconfMessage request;
-
-        private Request(final UncancellableFuture<RpcResult<NetconfMessage>> future,
-                        final NetconfMessage request) {
-            this.future = future;
-            this.request = request;
-        }
-    }
-
-    private boolean startClosing() {
-        return CLOSING_UPDATER.compareAndSet(this, 0, 1);
     }
 }
